added redis for caching